--- a/core/dbio/templates/databricks.yaml
+++ b/core/dbio/templates/databricks.yaml
@@ -169,6 +169,17 @@ core:
     INSERT INTO {tgt_table} ({insert_fields})
     SELECT {src_fields} FROM {src_table} src
 
+  # Foreign key DDL template (Databricks Unity Catalog - declarative, not enforced)
+  # Note: Databricks does not support ON DELETE/UPDATE actions
+  add_foreign_key: |
+    ALTER TABLE {table} ADD CONSTRAINT {constraint} FOREIGN KEY ({column}) REFERENCES {ref_table}({ref_column})
+
+  # Column comment/description template (ALTER TABLE ... ALTER COLUMN syntax)
+  add_column_comment: ALTER TABLE {table} ALTER COLUMN `{column}` COMMENT {comment}
+
+  # Table comment/description template
+  add_table_comment: COMMENT ON TABLE {table} IS {comment}
+
 metadata:
 
   current_database:
@@ -259,6 +270,56 @@ metadata:
 
   ddl_view: |
     show create table {schema}.{table}
+
+  # Extended column attributes for schema migration (Unity Catalog)
+  columns_extended: |
+    SELECT
+      c.column_name,
+      CASE WHEN c.is_nullable = 'YES' THEN 'true' ELSE 'false' END AS is_nullable,
+      c.column_default AS default_value,
+      CASE WHEN c.extra_info LIKE '%IDENTITY%' OR c.extra_info LIKE '%GENERATED%' THEN 'true' ELSE 'false' END AS is_auto_increment,
+      '1' AS identity_seed,
+      '1' AS identity_increment,
+      CASE WHEN pk.column_name IS NOT NULL THEN 'true' ELSE 'false' END AS is_primary_key,
+      c.comment AS description
+    FROM information_schema.columns c
+    LEFT JOIN (
+      SELECT column_name
+      FROM information_schema.constraint_column_usage
+      WHERE table_schema = lower('{schema}')
+        AND table_name = lower('{table}')
+        AND constraint_type = 'PRIMARY KEY'
+    ) pk ON lower(pk.column_name) = lower(c.column_name)
+    WHERE c.table_schema = lower('{schema}') AND c.table_name = lower('{table}')
+    ORDER BY c.ordinal_position
+
+  # Foreign key relationships (Unity Catalog)
+  foreign_keys: |
+    SELECT
+      tc.constraint_name,
+      kcu.column_name,
+      ccu.table_schema AS referenced_schema,
+      ccu.table_name AS referenced_table,
+      ccu.column_name AS referenced_column,
+      'NO ACTION' AS on_delete,
+      'NO ACTION' AS on_update
+    FROM information_schema.table_constraints tc
+    JOIN information_schema.key_column_usage kcu
+      ON tc.constraint_name = kcu.constraint_name
+      AND tc.table_schema = kcu.table_schema
+    JOIN information_schema.constraint_column_usage ccu
+      ON tc.constraint_name = ccu.constraint_name
+      AND tc.table_schema = ccu.table_schema
+    WHERE tc.constraint_type = 'FOREIGN KEY'
+      AND tc.table_schema = lower('{schema}')
+      AND tc.table_name = lower('{table}')
+    ORDER BY tc.constraint_name, kcu.ordinal_position
+
+  # Extended table attributes for schema migration
+  table_extended: |
+    SELECT comment AS description
+    FROM information_schema.tables
+    WHERE table_schema = lower('{schema}') AND table_name = lower('{table}')
 
 analysis:
   # table level
@@ -626,3 +687,27 @@ general_type_map:
   timestampz: timestamp
   timez: string
   uuid: string
+
+# Schema migration: default value translation between native and generalized forms
+default_value_map:
+  to_general:
+    "current_timestamp()": "current_timestamp"
+    "CURRENT_TIMESTAMP()": "current_timestamp"
+    "current_timestamp": "current_timestamp"
+    "CURRENT_TIMESTAMP": "current_timestamp"
+    "current_date()": "current_date"
+    "CURRENT_DATE()": "current_date"
+    "current_date": "current_date"
+    "CURRENT_DATE": "current_date"
+    "uuid()": "uuid()"
+    "true": "true"
+    "false": "false"
+  from_general:
+    "current_timestamp": "current_timestamp()"
+    "current_timestamp_utc": "current_timestamp()"
+    "current_date": "current_date()"
+    "current_time": "current_timestamp()"
+    "uuid()": "uuid()"
+    "true": "true"
+    "false": "false"
+    "null": "NULL"
